  * Fix #619 return "" instead of "Infinity" if seconds == 0 in ftime
  * Add -P, --pidfile option to deluged

 GtkUI:
  * Add peer progress to the peers tab
  * Add ability to manually add peers
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog
  * Redesiged sidebar with filters for Active and Tracker (see FilterManager)
  * Implement #428 the ability to rename files and directories
  * Implement #229 add date added column
  * Implement #596 show speeds in title
  * Fix #636 not setting the daemon's config directory when using --config= with the UI in classic mode.
  * Fix #624 do not allow changing file priorities when using compact allocation
  * Fix #602 re-did files/peers tab state saving/loading
  * Fix gtk warnings
  * Add protocol traffic statusbar item
  * Rework the Remove Torrent Dialog to only have 2 options, remove data and remove from session.
  * Add "Install Plugin" and "Rescan Plugins" buttons to the Plugins preferences

 WebUi:
  * Lots of smaller tweaks.
  * All details tabs have the same features as in gtk-ui 1.0.x
  * Persistent sessions #486
  * Plugin improvements for easy use of templates and images in eggs. #497
  * Classic template takes over some style elements from white template.
  * https (for users that know how to create certificates)
  * Easier apache mod_proxy use.
  * Redesigned sidebar

 AjaxUI:
  * Hosted in a webui template.

 ConsoleUI:
  * New ConsoleUI written by Idoa01
  * Callable from command-line for scripts.

 Plugins:
  * Stats plugin for graphs.
  * Label plugin for grouping torrents and per torrent settings.

 Misc:
  * Implement #478 display UI options in usage help
  * Fix #547 add description to name field per HIG entry 2.1.1.1
  * Fix #531 set default log level to ERROR and add 2 command-line options, "-L, --loglevel" and "-q, --quiet".