@@ -790,10 +790,12 @@ class Preferences(component.Component):
 
     def on_test_port_clicked(self, data):
         log.debug("on_test_port_clicked")
-        def on_get_listen_port(port):
-            deluge.common.open_url_in_browser(
-                "http://deluge-torrent.org/test-port.php?port=%s" % port)
-        client.get_listen_port(on_get_listen_port)
+        def on_get_test(status):
+            if status:
+                self.glade.get_widget("port_img").set_from_stock(gtk.STOCK_YES, 4).show()
+            else:
+                self.glade.get_widget("port_img").set_from_stock(gtk.STOCK_DIALOG_WARNING, 4).show()
+        client.test_listen_port(on_get_test)
         client.force_call()
 
     def on_plugin_toggled(self, renderer, path):
